--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
       "type": "image/png"  
     }
     ],
-  "start_url": "/progressive-web-app-basic/",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#FFFFFF"
